[package]
name = "castle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "*", features = ["wayland", "dynamic_linking","bevy_winit"]}
bevy_ascii_terminal = "*"
bevy_common_assets = {version = "*", features=["toml"]}
winit = {version = "*", features = ["wayland-csd-adwaita"]}
serde = "*"
linked-hash-map = { version = "*", features = ["serde_impl"] }
regex = "*"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
